--- a/packer/app.json
+++ b/packer/app.json
@@ -1,7 +1,7 @@
 { 
 "variables": {
 	"proj_id": null,
-	"source_image_family": null,
+	"source_image": null,
         "machine_type": "f1-micro"
 },
 
@@ -10,9 +10,8 @@
 	{	
 	"type": "googlecompute",
 	"project_id": "{{user `proj_id`}}",
-	"image_name": "reddit-base-{{timestamp}}",
-	"image_family": "reddit-full",
-	"source_image_family": "{{user `source_image_family`}}",
+	"image_name": "reddit-app-{{timestamp}}",
+	"source_image": "{{user `source_image`}}",
 	"zone": "europe-west1-b",
 	"ssh_username": "appuser",
 	"machine_type": "{{user `machine_type`}}"
@@ -23,7 +22,8 @@
 "provisioners": [
 	{
 	"type": "shell",
-	"script": "files/startup_puma.sh"
+	"script": "scripts/install_ruby.sh"
 	}
+
 ]
 }
