--- a/ansible/playbooks/reddit_app_one_play.yml
+++ b/ansible/playbooks/reddit_app_one_play.yml
@@ -1,3 +1,4 @@
+---
 - name: Configure hosts & deploy application
   hosts: all
   vars:
@@ -34,7 +35,7 @@
 
     - name: Fetch the latest version of application code
       git:
-        repo: 'https://github.com/Artemmkin/reddit.git'
+        repo: 'https://github.com/express42/reddit'
         dest: /home/appuser/reddit
         version: monolith
       tags: deploy-tag
